...

    // Check for FVM
    if (await ops
        .exists('$projectPath/.fvm/flutter_sdk')
        .timeout(const Duration(milliseconds: 2000), onTimeout: () => false)) {
      configs.add(const LaunchConfiguration(
        name: 'Flutter (FVM)',
        flutterPath: 'fvm flutter',
        args: [],
      ));
    }

    // Check for User Custom Flutter (Standard termux-flutter-wsl path)
...
